--- a/NameSpace/ns-deployment.yaml
+++ b/NameSpace/ns-deployment.yaml
@@ -1,1 +1,10 @@
-
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: development
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: production
