--- a/NameSpace/ns-deployment.yaml
+++ b/NameSpace/ns-deployment.yaml
@@ -8,3 +8,30 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: production
+---
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
+metadata:
+    app: nginx
+    namespace: development
+spec:
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: nginx
+        role: master
+        tier: backend
+    spec:
+      containers:
+      - name: nginx
+        image: nginx  # or just image: redis
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+        ports:
+        - containerPort: 80
