--- a/NameSpace/ns-deployment.yaml
+++ b/NameSpace/ns-deployment.yaml
@@ -9,7 +9,7 @@ kind: Namespace
 metadata:
   name: production
 ---
-apiVersion: v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
     app: nginx
