--- a/NameSpace/ns-deployment.yaml
+++ b/NameSpace/ns-deployment.yaml
@@ -12,24 +12,29 @@ metadata:
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-    app: nginx
-    namespace: development
+  name: redis-master
+  labels:
+    app: redis
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: redis
+      role: master
+      tier: backend
   replicas: 1
   template:
     metadata:
       labels:
-        app: nginx
+        app: redis
+        role: master
+        tier: backend
     spec:
       containers:
-      - name: nginx
-        image: nginx:latest  #
+      - name: master
+        image: k8s.gcr.io/redis:e2e  # or just image: redis
         resources:
           requests:
             cpu: 100m
             memory: 100Mi
         ports:
-        - containerPort: 80
+        - containerPort: 6379
