--- a/secrets/Ingress-with-secrets/ingress.yaml
+++ b/secrets/Ingress-with-secrets/ingress.yaml
@@ -5,17 +5,17 @@ metadata:
 spec:
   tls:
   - hosts:
-    - ams.cheese.com
+    - mysql.services.com
     secretName: secret-ssl
   rules:
-  - host: ams.cheese.com
+  - host: mysql.services.com
     http:
       paths:
       - path: /username
         backend:
           serviceName: nginx-secret-svc-username
           servicePort: 80
-      - path: /passowrd
+      - path: /pass
         backend:
           serviceName:  nginx-secret-svc-password
           servicePort: 80
