--- a/secrets/Ingress-with-secrets/pod-url.yaml
+++ b/secrets/Ingress-with-secrets/pod-url.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: url
-      image: nginxdemos/hello:plain-text
+      image: nginx
       ports:
         - containerPort: 80
       volumeMounts:
@@ -39,4 +39,4 @@ metadata:
   name: url
 type: Opaque
 data:
-  url: cm9vdF91c2VyCg==
+  url: bXlzcWwuc2VydmljZXMuY29tCg==
