--- a/secrets/Ingress-with-secrets/pod-password.yaml
+++ b/secrets/Ingress-with-secrets/pod-password.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: password
-      image: nginxdemos/hello:plain-text
+      image: nginx
       ports:
         - containerPort: 80
       volumeMounts:
@@ -39,4 +39,4 @@ metadata:
   name: password
 type: Opaque
 data:
-  password: cm9vdF91c2VyCg==
+  password: RXhwZXJ0cyExMjMK
