--- a/secrets/Ingress-with-secrets/pod-username.yaml
+++ b/secrets/Ingress-with-secrets/pod-username.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: username
-      image: nginxdemos/hello:plain-text
+      image: nginx:latest
       ports:
         - containerPort: 80
       volumeMounts:
