--- a/Helm/exercise3 - museum/index.yaml
+++ b/Helm/exercise3 - museum/index.yaml
@@ -8,7 +8,7 @@ entries:
     name: test1
     type: application
     urls:
-    - charts/test1-0.1.0.tgz
+    - test1-0.1.0.tgz
     version: 0.1.0
 generated: "2020-07-20T20:45:59Z"
 serverInfo: {}
