--- a/secrets/Ingress-with-secrets/ingress.yaml
+++ b/secrets/Ingress-with-secrets/ingress.yaml
@@ -1,25 +1,36 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: secret-example-ingress
+  name: cheese-ingress
 spec:
   tls:
   - hosts:
     - mysql.services.com
-    secretName: secret-ssl
+    secretName: my-secret
   rules:
   - host: mysql.services.com
     http:
       paths:
-      - path: /username
-        backend:
-          serviceName: nginx-secret-svc-username
-          servicePort: 80
-      - path: /pass
-        backend:
-          serviceName:  nginx-secret-svc-password
-          servicePort: 80
       - path: /url
+        pathType: Prefix
         backend:
-          serviceName:  nginx-secret-svc-url
-          servicePort: 80
+          service:
+            name: nginx-secret-svc-url
+            port:
+              number: 80
+      paths:
+      - path: /username
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx-secret-svc-username
+            port:
+              number: 80
+      paths:
+      - path: /password
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx-secret-svc-password
+            port:
+              number: 80
