--- a/secrets/Ingress-with-secrets/pod-password.yaml
+++ b/secrets/Ingress-with-secrets/pod-password.yaml
@@ -11,11 +11,11 @@ spec:
       ports:
         - containerPort: 80
       volumeMounts:
-      - name: secret
+      - name: secret1
         mountPath: "/usr/share/nginx/html"
         readOnly: true
   volumes:
-    - name: secret
+    - name: secret1
       secret:
         secretName: password
 ---
