--- a/Helm/todos/todo/templates/serviceaccount.yaml
+++ b/Helm/todos/todo/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "test1.serviceAccountName" . }}
+  name: {{ include "todo.serviceAccountName" . }}
   labels:
-    {{- include "test1.labels" . | nindent 4 }}
+    {{- include "todo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
