--- a/Helm/todos/todo/templates/service.yaml
+++ b/Helm/todos/todo/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "test1.fullname" . }}
+  name: {{ include "todo.fullname" . }}
   labels:
-    {{- include "test1.labels" . | nindent 4 }}
+    {{- include "todo.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "test1.selectorLabels" . | nindent 4 }}
+    {{- include "todo.selectorLabels" . | nindent 4 }}
