--- a/Helm/todos/todo/values.yaml
+++ b/Helm/todos/todo/values.yaml
@@ -1,4 +1,4 @@
-# Default values for test1.
+# Default values for todo.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,9 +6,9 @@ replicaCount: 3
 
 image:
   repository: avielb/todo
-  #pullPolicy: IfNotPresent
+  tag: latest
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -42,12 +42,15 @@ service:
 
 ingress:
   enabled: false
+  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
