--- a/Helm/wordpress/Workdpress-Statfull/Chart.yaml
+++ b/Helm/wordpress/Workdpress-Statfull/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.1"
-description: This is a package for configuring wordpress and mysql on kubertes automatically
+description: This is a package for configuring wordpress and mysql on K8s automatically By @Ron Yahel
 name: wordpress-mysql
 version: 1.0.0
